--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "georg",
   "license": "ISC",
   "dependencies": {
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.2"
   },
