--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "author": "georg",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "celebrate": "^15.0.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.6.2"
+    "http2": "^3.3.7",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.2",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "eslint": "^8.51.0",
