--- a/package.json
+++ b/package.json
@@ -23,10 +23,6 @@
     "eslint": "^8.51.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1",
-    "nodemon": "^3.0.1",
-    "body-parser": "^1.20.2",
-    "depcheck": "^1.4.7",
-    "ejs": "^3.1.9",
-    "http2": "^3.3.7"
+    "nodemon": "^3.0.1"
   }
 }
